# loco.rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
loco/: Cargo.toml
loco-client/: Cargo.toml
loco-client/src/: lib.rs
loco-client/src/reactor/: entrance.rs  mod.rs
loco-derive/: Cargo.toml
loco-derive/src/: lib.rs
loco/src/: config.rs  crypto.rs  error.rs  lib.rs
loco/src/api/: login.rs  mod.rs  oauth.rs
loco/src/codec/: insecure.rs  mod.rs  secure.rs
loco/src/types/: booking.rs  chat.rs  mod.rs  openlink.rs  user.rs
loco/src/types/request/: booking.rs  checkin.rs  mod.rs  ping.rs
loco/src/types/response/: booking.rs  checkin.rs  mod.rs
src/: client.rs  codec.rs  config.rs  lib.rs  login_data.rs  tests.rs  xvc_key.rs
src/client/: entrance.rs  mod.rs
src/codec/: insecure.rs  mod.rs  secure.rs
src/dispatch/: mod.rs
src/internal/: account.rs  agent.rs  attachment.rs  client.rs  device_register_data.rs  emoticon.rs  key.rs  language.rs  loco_pem_pub_key  loco_pub_key  login_access_data.rs  login_data.rs  mod.rs  net_type.rs  os.rs  request.rs  status_code.rs  token_client.rs  xvc_key.rs
src/kakao_api/: mod.rs
src/kakao_api/path/: account_path.rs  mod.rs
src/net/: mod.rs
src/packet/: get_conf.rs  mod.rs  protocol_info.rs
src/packet/model/: connection_info.rs  etc_info.rs  mod.rs  ticket_info.rs  trailer_info.rs  trailer_info_high.rs
src/packet/protocol/: buy_call_server.rs  check_in.rs  down.rs  get_conf.rs  login_list.rs  mini.rs  mod.rs  sync_message.rs
src/protocol/: header.rs  mod.rs  ping.rs  raw_loco_client.rs
src/protocol/booking/: get_conf.rs  mod.rs
src/protocol/chat/: change_svr.rs  chat_info.rs  chat_on_room.rs  chg_meta.rs  decun_read.rs  delete_msg.rs  get_mem.rs  kick_out.rs  l_chat_list.rs  leave.rs  left.rs  login_list.rs  member.rs  mod.rs  msg.rs  new_mem.rs  noti_read.rs  set_meta.rs  set_st.rs  sync.rs  sync_link.rs  sync_msg.rs  update_chat.rs  write.rs
src/protocol/checkin/: buy_cs.rs  checkin.rs  mod.rs
src/protocol/structs/: chat.rs  chatroom.rs  client.rs  connection.rs  mod.rs  open_link.rs  user.rs
src/tests/: login.rs  mod.rs
src/types/: booking.rs  channel.rs  chat.rs  checkin.rs  mod.rs  open_chat.rs  os.rs  user.rs
src/types/chat/: attachment.rs  feed.rs  kickout.rs  login_list.rs  message.rs  mod.rs
src/types/chat/attachment/: custom.rs  file.rs  mod.rs  sharp.rs  sticker.rs  text.rs
src/types/chat_room/: chat.rs  feed.rs  log.rs  member.rs  mod.rs
src/types/chat_room/attachment/: custom.rs  file.rs  mod.rs  sharp.rs  text.rs
src/types/chatroom/: log.rs  mod.rs
src/types/chatroom/attachment/: custom.rs  emoticon.rs  mod.rs  sharp.rs
src/types/structs/: channel.rs  chat.rs  login.rs  member.rs  mod.rs  open_link.rs  settings.rs
tests/: client.rs  login.rs  mod.rs  register_device.rs  request_passcode.rs  token_client.rs
