[package]
name = "loco"
version = "0.1.0"
authors = [
    "Seungjae Park <astro.psj@gmail.com>",
    "JellyBrick <shlee1503@naver.com>",
    "kiwiyou <kiwiyou.dev@gmail.com>",
    "Sangwon Ryu <bdboy090@naver.com>",
    "nnnlog <sorisem4106@naver.com>"
]
edition = "2018"
description = "Loco Protocol Wrapper for Rust"
documentation = "https://docs.rs/loco"
readme = "README.md"
repository = "https://github.com/organization/loco.rs"
license = "Apache-2.0"

[dependencies]
bson = "1.2.2"
bytes = "1.0.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
strum = { version = "0.20.0", features = ["derive"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
