[package]
name = "loco"
version = "0.1.0"
authors = [
    "Seungjae Park <astro.psj@gmail.com>",
    "JellyBrick <shlee1503@naver.com>",
    "kiwiyou <kiwiyou.dev@gmail.com>",
    "Sangwon Ryu <bdboy090@naver.com>",
    "nnnlog <sorisem4106@naver.com>"
]
edition = "2018"
description = "Loco Protocol Wrapper for Rust"
documentation = "https://docs.rs/loco"
readme = "README.md"
repository = "https://github.com/organization/loco.rs"
license = "Apache-2.0"

[dependencies]
bson = "2.0"
hex-literal = "0.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.9.0"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
data-encoding = "2.2.0"
tokio = { version = "1.0.1", features = ["macros"] }
tokio-util = { version = "0.6.0", features = ["codec"], default-features = false }
bytes = "1.0.0"
futures = "0.3.5"
log = "0.4.8"
loco-derive = { path = "loco-derive" }
webpki = "0.22"
bincode = "1.3"