[package]
name = "loco"
version = "0.1.0"
authors = [
    "Seungjae Park <astro.psj@gmail.com>",
    "JellyBrick <shlee1503@naver.com>",
    "kiwiyou <kiwiyou.dev@gmail.com>",
    "Sangwon Ryu <bdboy090@naver.com>",
    "nnnlog <sorisem4106@naver.com>"
]
edition = "2018"
description = "Loco Protocol Wrapper for Rust"
documentation = "https://docs.rs/loco"
readme = "README.md"
repository = "https://github.com/organization/loco.rs"
license = "Apache-2.0"

[dependencies]
bson = "2.4"
hex-literal = "0.3.4"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
data-encoding = "2.3.2"
tokio = { version = "1.21.0", features = ["macros"] }
tokio-util = { version = "0.7.3", features = ["codec"], default-features = false }
bytes = "1.2.1"
futures = "0.3.24"
log = "0.4.17"
loco-derive = { path = "loco-derive" }
webpki = "0.22"
bincode = "1.3"